--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "logger": "^0.0.1",
     "mongoose": "^8.15.0",
+    "morgan": "^1.10.0",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
